--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,38 @@
-.mainDiv {
-    height: 100%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+* {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+    outline: none;
+    border: none;
+    text-decoration: none;
+    scroll-behavior: smooth;
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+}
+
+body{
+    background: url("../img/fon.jpg");
+    overflow: scroll;
+    background-attachment: fixed;
+}
+
+h1 {
+    font-size: 24px;
     text-align: center;
 }
 
-.info,
-.education,
-.contactInfo {
+.mainDiv {
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, 0);
+    width: 40%;
+    background-color: rgba(255, 255, 255, 0.7);
+    text-align: center;
+}
+
+.block {
     margin: 10px 0;
-    border: solid 2px #ccc;
+    border: solid 2px #afaccc;
     border-radius: 2px
 }
 
@@ -34,4 +55,63 @@ input {
 button {
     margin: 10px 0;
     padding: 10px;
+    background-color: #afaccc;
+}
+
+textarea {
+    border: none;
+    border-bottom: 1px solid #ccc;
+    width: 100%;
+    resize: none;
+}
+
+.photo {
+    text-align: left;
+    padding: 5px 0;
+}
+
+img {
+    height: 80px;
+}
+
+@media print {
+    * {
+        font-size: 14px;
+        font-family: 'Times New Roman', Times, serif;
+    }
+
+    body{
+        background: none;
+        overflow: none;
+        background-attachment: none;
+    }
+
+    .mainDiv {
+        width: 100%;
+        position: none;
+        left: 0;
+        transform: translate(0, 0);
+        text-align: center;
+    }
+
+    button {
+        display: none;
+    }
+
+    .block {
+        border: none;
+    }
+
+    .photo {
+        text-align: left;
+        border: 1px solid black;
+        width: 35px;
+        height: 45px;
+        padding: 5px;
+    }
+
+    img {
+        width: 100%;
+        height: 40px;
+    }
 }
